Add query for /version endpoint (updates openapi.json)
